# Universal_Rasterized_Science_Agent_URSA

./: .env.example  .gitignore  README.txt  pyproject.toml  requirements.txt
rag/: chromadb_utils.py
src/: orchestration.py  schemas.py  tools.py
src/ursa/: __init__.py  app.py  config.py
src/ursa/agent/: message_formatter.py  orchestration.py  schemas.py  tools.py
tests/: schema_and_tools_tests.py
utilities/: stream_formatter.py
